refactor: simplify club event workflows
